Fix tile text, add percentage and colour

--- a/stats.html
+++ b/stats.html
@@ -73,9 +73,9 @@
 				</div>
 				<nav class="nav nav-pills" id="distrostats" style="display:none">
 					<button class="nav-link filter" data-filter="all">[All]</button>
-					<button class="nav-link filter" data-filter=".commands">Raspberry Pi</button>
-					<button class="nav-link filter" data-filter=".raspberrypios">Raspberry Pi</button>
-					<button class="nav-link filter" data-filter=".armbian">NanoPi R2S</button>
+					<button class="nav-link filter" data-filter=".commands">Commands</button>
+					<button class="nav-link filter" data-filter=".raspberrypios">Raspberry Pi OS</button>
+					<button class="nav-link filter" data-filter=".armbian">Armbian</button>
 				</nav>
 				<div id="commands" class="toggleDiv single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Commands to derive data</h3><span class="show_hide close"></span></div></div>
@@ -106,16 +106,16 @@
 								<h5>on Raspberry Pi 2</h5>
 								<table>
 									<tr><th>Stat</th><th>DietPi</th><th>Raspberry Pi OS</th></tr>
-									<tr><td>RAM usage</td><td>26Mi</td><td>36Mi</td></tr>
-									<tr><td>Running processes</td><td>10</td><td>20</td></tr>
-									<tr><td>Disk usage</td><td>596.2M</td><td>1.2G</td></tr>
-									<tr><td>Pre-installed packages</td><td>223</td><td>475</td></tr>
-									<tr><td>Boot duration</td><td>17.881s</td><td>24.553s</td></tr>
-									<tr><td>Temporary files in RAM</td><td>Yes</td><td>No</td></tr>
-									<tr><td>Logs in RAM</td><td>Yes</td><td>No</td></tr>
-									<tr><td>SSH pre-installed</td><td>Yes</td><td>Optional</td></tr>
-									<tr><td>Download size</td><td>174.950.885 bytes</td><td>463.405.209 bytes</td></tr>
-									<tr><td>Image size</td><td>1.071.456.256 bytes</td><td>1.866.465.280 bytes</td></tr>
+									<tr><td>RAM usage</td><td style="color:#c5ff00">26Mi (72%)</td><td style="color:#e83e8c">36Mi (138%)</td></tr>
+									<tr><td>Running processes</td style="color:#c5ff00"><td>10 (50%)</td><td style="color:#e83e8c">20 (200%)</td></tr>
+									<tr><td>Disk usage</td><td style="color:#c5ff00">596.2M (49%)</td><td style="color:#e83e8c">1.2G (206%)</td></tr>
+									<tr><td>Pre-installed packages</td><td style="color:#c5ff00">223 (47%)</td><td style="color:#e83e8c">475 (213%)</td></tr>
+									<tr><td>Boot duration</td><td style="color:#c5ff00">17.881s (73%)</td><td style="color:#e83e8c">24.553s (137%)</td></tr>
+									<tr><td>Temporary files in RAM</td><td style="color:#c5ff00">Yes</td><td style="color:#e83e8c">No</td></tr>
+									<tr><td>Logs in RAM</td><td>Yes</td style="color:#c5ff00"><td style="color:#e83e8c">No</td></tr>
+									<tr><td>SSH pre-installed</td><td style="color:#c5ff00">Yes</td><td style="color:#e83e8c">Optional</td></tr>
+									<tr><td>Download size</td><td style="color:#c5ff00">174.950.885 bytes (38%)</td><td style="color:#e83e8c">463.405.209 bytes (265%)</td></tr>
+									<tr><td>Image size</td><td style="color:#c5ff00">1.071.456.256 bytes (57%)</td><td style="color:#e83e8c">1.866.465.280 bytes (174%)</td></tr>
 									<tr><td>Build date</td><td>2021-03-25</td><td>2021-01-11</td></tr>
 								</table>
 							</div>
@@ -130,16 +130,16 @@
 								<h5>on NanoPi R2S</h5>
 								<table>
 									<tr><th>Stat</th><th>DietPi</th><th>Raspberry Pi OS</th></tr>
-									<tr><td>RAM usage</td><td>26Mi</td><td>36Mi</td></tr>
-									<tr><td>Running processes</td><td>10</td><td>20</td></tr>
-									<tr><td>Disk usage</td><td>596.2M</td><td>1.2G</td></tr>
-									<tr><td>Pre-installed packages</td><td>223</td><td>475</td></tr>
-									<tr><td>Boot duration</td><td>17.881s</td><td>24.553s</td></tr>
-									<tr><td>Temporary files in RAM</td><td>Yes</td><td>No</td></tr>
-									<tr><td>Logs in RAM</td><td>Yes</td><td>No</td></tr>
-									<tr><td>SSH pre-installed</td><td>Yes</td><td>Optional</td></tr>
-									<tr><td>Download size</td><td>174.950.885 bytes</td><td>463.405.209 bytes</td></tr>
-									<tr><td>Image size</td><td>1.071.456.256 bytes</td><td>1.866.465.280 bytes</td></tr>
+									<tr><td>RAM usage</td><td style="color:#c5ff00">26Mi (72%)</td><td style="color:#e83e8c">36Mi (138%)</td></tr>
+									<tr><td>Running processes</td style="color:#c5ff00"><td>10 (50%)</td><td style="color:#e83e8c">20 (200%)</td></tr>
+									<tr><td>Disk usage</td><td style="color:#c5ff00">596.2M (49%)</td><td style="color:#e83e8c">1.2G (206%)</td></tr>
+									<tr><td>Pre-installed packages</td><td style="color:#c5ff00">223 (47%)</td><td style="color:#e83e8c">475 (213%)</td></tr>
+									<tr><td>Boot duration</td><td style="color:#c5ff00">17.881s (73%)</td><td style="color:#e83e8c">24.553s (137%)</td></tr>
+									<tr><td>Temporary files in RAM</td><td style="color:#c5ff00">Yes</td><td style="color:#e83e8c">No</td></tr>
+									<tr><td>Logs in RAM</td><td>Yes</td style="color:#c5ff00"><td style="color:#e83e8c">No</td></tr>
+									<tr><td>SSH pre-installed</td><td style="color:#c5ff00">Yes</td><td style="color:#e83e8c">Optional</td></tr>
+									<tr><td>Download size</td><td style="color:#c5ff00">174.950.885 bytes (38%)</td><td style="color:#e83e8c">463.405.209 bytes (265%)</td></tr>
+									<tr><td>Image size</td><td style="color:#c5ff00">1.071.456.256 bytes (57%)</td><td style="color:#e83e8c">1.866.465.280 bytes (174%)</td></tr>
 									<tr><td>Build date</td><td>2021-03-25</td><td>2021-01-11</td></tr>
 								</table>
 							</div>
