--- a/stats.html
+++ b/stats.html
@@ -107,12 +107,12 @@
 								<table>
 									<tr><th>Stat</th><th>DietPi</th><th>Raspberry Pi OS</th></tr>
 									<tr><td>RAM usage</td><td style="color:#c5ff00">26Mi (72%)</td><td style="color:#e83e8c">36Mi (138%)</td></tr>
-									<tr><td>Running processes</td style="color:#c5ff00"><td>10 (50%)</td><td style="color:#e83e8c">20 (200%)</td></tr>
+									<tr><td>Running processes</td><td style="color:#c5ff00">10 (50%)</td><td style="color:#e83e8c">20 (200%)</td></tr>
 									<tr><td>Disk usage</td><td style="color:#c5ff00">596.2M (49%)</td><td style="color:#e83e8c">1.2G (206%)</td></tr>
 									<tr><td>Pre-installed packages</td><td style="color:#c5ff00">223 (47%)</td><td style="color:#e83e8c">475 (213%)</td></tr>
 									<tr><td>Boot duration</td><td style="color:#c5ff00">17.881s (73%)</td><td style="color:#e83e8c">24.553s (137%)</td></tr>
 									<tr><td>Temporary files in RAM</td><td style="color:#c5ff00">Yes</td><td style="color:#e83e8c">No</td></tr>
-									<tr><td>Logs in RAM</td><td>Yes</td style="color:#c5ff00"><td style="color:#e83e8c">No</td></tr>
+									<tr><td>Logs in RAM</td><td style="color:#c5ff00">Yes</td><td style="color:#e83e8c">No</td></tr>
 									<tr><td>SSH pre-installed</td><td style="color:#c5ff00">Yes</td><td style="color:#e83e8c">Optional</td></tr>
 									<tr><td>Download size</td><td style="color:#c5ff00">174.950.885 bytes (38%)</td><td style="color:#e83e8c">463.405.209 bytes (265%)</td></tr>
 									<tr><td>Image size</td><td style="color:#c5ff00">1.071.456.256 bytes (57%)</td><td style="color:#e83e8c">1.866.465.280 bytes (174%)</td></tr>
@@ -131,12 +131,12 @@
 								<table>
 									<tr><th>Stat</th><th>DietPi</th><th>Raspberry Pi OS</th></tr>
 									<tr><td>RAM usage</td><td style="color:#c5ff00">26Mi (72%)</td><td style="color:#e83e8c">36Mi (138%)</td></tr>
-									<tr><td>Running processes</td style="color:#c5ff00"><td>10 (50%)</td><td style="color:#e83e8c">20 (200%)</td></tr>
+									<tr><td>Running processes</td><td style="color:#c5ff00">10 (50%)</td><td style="color:#e83e8c">20 (200%)</td></tr>
 									<tr><td>Disk usage</td><td style="color:#c5ff00">596.2M (49%)</td><td style="color:#e83e8c">1.2G (206%)</td></tr>
 									<tr><td>Pre-installed packages</td><td style="color:#c5ff00">223 (47%)</td><td style="color:#e83e8c">475 (213%)</td></tr>
 									<tr><td>Boot duration</td><td style="color:#c5ff00">17.881s (73%)</td><td style="color:#e83e8c">24.553s (137%)</td></tr>
 									<tr><td>Temporary files in RAM</td><td style="color:#c5ff00">Yes</td><td style="color:#e83e8c">No</td></tr>
-									<tr><td>Logs in RAM</td><td>Yes</td style="color:#c5ff00"><td style="color:#e83e8c">No</td></tr>
+									<tr><td>Logs in RAM</td><td style="color:#c5ff00">Yes</td><td style="color:#e83e8c">No</td></tr>
 									<tr><td>SSH pre-installed</td><td style="color:#c5ff00">Yes</td><td style="color:#e83e8c">Optional</td></tr>
 									<tr><td>Download size</td><td style="color:#c5ff00">174.950.885 bytes (38%)</td><td style="color:#e83e8c">463.405.209 bytes (265%)</td></tr>
 									<tr><td>Image size</td><td style="color:#c5ff00">1.071.456.256 bytes (57%)</td><td style="color:#e83e8c">1.866.465.280 bytes (174%)</td></tr>
