Adjust image file types

--- a/stats.html
+++ b/stats.html
@@ -208,7 +208,7 @@
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix raspberrypios">
 						<a href="#distrostats" class="thumbnail show_hide" rel="#raspberrypios1">
-							<img src="images/stats/raspberrypios.jpg" alt="Raspberry Pi OS logo" width="8" height="5" loading="lazy">
+							<img src="images/stats/raspberrypios.svg" alt="Raspberry Pi OS logo" width="8" height="5" loading="lazy">
 							<div class="mask"></div>
 							<i class="more"></i>
 							<h3>Raspberry Pi OS Lite</h3>
@@ -217,7 +217,7 @@
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix armbian">
 						<a href="#distrostats" class="thumbnail show_hide" rel="#armbian1">
-							<img src="images/stats/armbian.jpg" alt="Armbian logo" width="8" height="5" loading="lazy">
+							<img src="images/stats/armbian.png" alt="Armbian logo" width="8" height="5" loading="lazy">
 							<div class="mask"></div>
 							<i class="more"></i>
 							<h3>Armbian</h3>
@@ -226,7 +226,7 @@
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix armbian">
 						<a href="#distrostats" class="thumbnail show_hide" rel="#armbian2">
-							<img src="images/stats/armbian.jpg" alt="Armbian logo" width="8" height="5" loading="lazy">
+							<img src="images/stats/armbian.png" alt="Armbian logo" width="8" height="5" loading="lazy">
 							<div class="mask"></div>
 							<i class="more"></i>
 							<h3>Armbian</h3>
@@ -235,7 +235,7 @@
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix debian">
 						<a href="#distrostats" class="thumbnail show_hide" rel="#debian1">
-							<img src="images/stats/debian.jpg" alt="Debian logo" width="8" height="5" loading="lazy">
+							<img src="images/stats/debian.svg" alt="Debian logo" width="8" height="5" loading="lazy">
 							<div class="mask"></div>
 							<i class="more"></i>
 							<h3>Debian</h3>
