--- a/stats.html
+++ b/stats.html
@@ -199,7 +199,7 @@
 				<div id="portfolio-grid" class="row" style="display:none">
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix commands">
 						<a href="#distrostats" class="thumbnail show_hide" rel="#commands">
-							<img src="images/stats/commands.jpg" alt="Raspberry Pi photo" width="8" height="5" loading="lazy">
+							<img src="images/stats/commands.svg" alt="Linux command prompt sign" width="8" height="5" loading="lazy">
 							<div class="mask"></div>
 							<i class="more"></i>
 							<h3>Test commands</h3>
