Add Debian filter

--- a/stats.html
+++ b/stats.html
@@ -78,6 +78,7 @@
 					<button class="nav-link filter" data-filter=".commands">Commands</button>
 					<button class="nav-link filter" data-filter=".raspberrypios">Raspberry Pi OS</button>
 					<button class="nav-link filter" data-filter=".armbian">Armbian</button>
+					<button class="nav-link filter" data-filter=".debian">Debian</button>
 				</nav>
 				<div id="commands" class="toggleDiv single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Commands to derive data</h3><span class="show_hide close"></span></div></div>
