--- a/stats.html
+++ b/stats.html
@@ -180,18 +180,41 @@
 							<div class="project-info">
 								<h5>on Odroid C4</h5>
 								<table>
-									<tr><th>Stat</th><th>DietPi</th><th>DietPi/Debian [%]</th><th>Armbian</th></tr>
+									<tr><th>Stat</th><th>DietPi</th><th>DietPi/Debian [%]</th><th>Debian</th></tr>
 									<tr><td>RAM usage</td><td class="win">129Mi</td><td>96%</td><td class="los">134Mi</td></tr>
 									<tr><td>Running processes</td><td class="win">12</td><td>67%</td><td class="los">18</td></tr>
 									<tr><td>Disk usage</td><td class="win">521.9M</td><td>71%</td><td class="los">725.4M</td></tr>
 									<tr><td>Pre-installed packages</td><td class="win">216</td><td>94%</td><td class="los">231</td></tr>
-									<tr><td>Boot duration</td><td class="los">16.528s</td><td>24%</td><td class="win">1min 8.115s</td></tr>
+									<tr><td>Boot duration</td><td class="win">16.528s</td><td>24%</td><td class="los">1min 8.115s</td></tr>
 									<tr><td>Temporary files in RAM</td><td class="win">Yes</td><td></td><td class="los">No</td></tr>
 									<tr><td>Logs in RAM</td><td class="win">Yes</td><td></td><td class="los">No</td></tr>
 									<tr><td>SSH pre-installed</td><td>Yes</td><td></td><td>Yes</td></tr>
 									<tr><td>Download size</td><td class="los">161.822.824 bytes</td><td>135%</td><td class="win">119.896.092 bytes</td></tr>
 									<tr><td>Image size</td><td class="los">1.148.600.320 bytes</td><td>107%</td><td class="win">1.074.790.400 bytes</td></tr>
 									<tr><td>Build date</td><td>2021-01-08</td><td>2021-05-06</td></tr>
+								</table>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div id="debian2" class="toggleDiv single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>DietPi vs Debian (server image)</h3><span class="show_hide close"></span></div></div>
+					<div class="row">
+						<div class="col-md-12 project-description">
+							<div class="project-info">
+								<h5>on x86_64 PC</h5>
+								<table>
+									<tr><th>Stat</th><th>DietPi</th><th>DietPi/Debian [%]</th><th>Debian</th></tr>
+									<tr><td>RAM usage</td><td class="los">112Mi</td><td>103%</td><td class="win">109Mi</td></tr>
+									<tr><td>Running processes</td><td class="win">13</td><td>81%</td><td class="los">16</td></tr>
+									<tr><td>Disk usage</td><td class="win">755.2M</td><td>67%</td><td class="los">1.1G</td></tr>
+									<tr><td>Pre-installed packages</td><td class="win">237</td><td>72%</td><td class="los">328</td></tr>
+									<tr><td>Boot duration</td><td class="los">11.569s</td><td>374%</td><td class="win">3.090s</td></tr>
+									<tr><td>Temporary files in RAM</td><td class="win">Yes</td><td></td><td class="los">No</td></tr>
+									<tr><td>Logs in RAM</td><td class="win">Yes</td><td></td><td class="los">No</td></tr>
+									<tr><td>SSH pre-installed</td><td>Yes</td><td></td><td>Yes</td></tr>
+									<tr><td>Download size</td><td class="los">608.374.862 bytes</td><td>135%</td><td class="win">353.370.112 bytes</td></tr>
+									<tr><td>Build date</td><td>2020-09-17</td><td>2021-03-19</td></tr>
 								</table>
 							</div>
 						</div>
@@ -241,6 +264,15 @@
 							<i class="more"></i>
 							<h3>Debian</h3>
 							<p>on Odroid C4</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix debian">
+						<a href="#distrostats" class="thumbnail show_hide" rel="#debian2">
+							<img src="images/stats/debian.svg" alt="Debian logo" width="8" height="5" loading="lazy">
+							<div class="mask"></div>
+							<i class="more"></i>
+							<h3>Debian</h3>
+							<p>on x86_64 PC</p>
 						</a>
 					</div>
 				</div>
