--- a/stats.html
+++ b/stats.html
@@ -36,7 +36,7 @@
 			.project-info { overflow-x: auto; }
 			table { width: 100%; white-space: nowrap; }
 			th,td { border: 1px solid #9ccc00; padding: 5px; }
-			code, td.los { color: #ff7799; }
+			td.code, td.los { color: #ff7799; }
 			td.win { color: #c5ff00; }
 		</style>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -119,7 +119,7 @@
 									<tr><td>SSH pre-installed</td><td class="win">Yes</td><td></td><td class="los">Optional</td></tr>
 									<tr><td>Download size</td><td class="win">174.950.885 bytes</td><td>38%</td><td class="los">463.405.209 bytes</td></tr>
 									<tr><td>Image size</td><td class="win">1.071.456.256 bytes</td><td>57%</td><td class="los">1.866.465.280 bytes</td></tr>
-									<tr><td>Build date</td><td>2021-03-25</td><td>2021-01-11</td></tr>
+									<tr><td>Build date</td><td>2021-03-25</td><td></td><td>2021-01-11</td></tr>
 								</table>
 							</div>
 						</div>
@@ -143,7 +143,7 @@
 									<tr><td>SSH pre-installed</td><td class="win">Yes</td><td></td><td class="los">Optional</td></tr>
 									<tr><td>Download size</td><td class="win">174.950.885 bytes</td><td>38%</td><td class="los">463.405.209 bytes</td></tr>
 									<tr><td>Image size</td><td class="win">1.071.456.256 bytes</td><td>57%</td><td class="los">1.866.465.280 bytes</td></tr>
-									<tr><td>Build date</td><td>2021-03-25</td><td>2021-01-11</td></tr>
+									<tr><td>Build date</td><td>2021-03-25</td><td></td><td>2021-01-11</td></tr>
 								</table>
 							</div>
 						</div>
@@ -167,7 +167,7 @@
 									<tr><td>SSH pre-installed</td><td>Yes</td><td></td><td>Yes</td></tr>
 									<tr><td>Download size</td><td class="win">161.822.824 bytes</td><td>44%</td><td class="los">364.990.872 bytes</td></tr>
 									<tr><td>Image size</td><td class="win">1.148.600.320 bytes</td><td>67%</td><td class="los">1.702.887.424 bytes</td></tr>
-									<tr><td>Build date</td><td>2021-01-08</td><td>2021-05-07</td></tr>
+									<tr><td>Build date</td><td>2021-01-08</td><td></td><td>2021-05-07</td></tr>
 								</table>
 							</div>
 						</div>
@@ -191,7 +191,7 @@
 									<tr><td>SSH pre-installed</td><td>Yes</td><td></td><td>Yes</td></tr>
 									<tr><td>Download size</td><td class="los">161.822.824 bytes</td><td>135%</td><td class="win">119.896.092 bytes</td></tr>
 									<tr><td>Image size</td><td class="los">1.148.600.320 bytes</td><td>107%</td><td class="win">1.074.790.400 bytes</td></tr>
-									<tr><td>Build date</td><td>2021-01-08</td><td>2021-05-06</td></tr>
+									<tr><td>Build date</td><td>2021-01-08</td><td></td><td>2021-05-06</td></tr>
 								</table>
 							</div>
 						</div>
@@ -214,7 +214,7 @@
 									<tr><td>Logs in RAM</td><td class="win">Yes</td><td></td><td class="los">No</td></tr>
 									<tr><td>SSH pre-installed</td><td>Yes</td><td></td><td>Yes</td></tr>
 									<tr><td>Download size</td><td class="los">608.374.862 bytes</td><td>135%</td><td class="win">353.370.112 bytes</td></tr>
-									<tr><td>Build date</td><td>2020-09-17</td><td>2021-03-19</td></tr>
+									<tr><td>Build date</td><td>2020-09-17</td><td></td><td>2021-03-19</td></tr>
 								</table>
 							</div>
 						</div>
