Fix code colour Nr. 2

--- a/stats.html
+++ b/stats.html
@@ -36,7 +36,7 @@
 			.project-info { overflow-x: auto; }
 			table { width: 100%; white-space: nowrap; }
 			th,td { border: 1px solid #9ccc00; padding: 5px; }
-			td.code, td.los { color: #ff7799; }
+			td>code, td.los { color: #ff7799; }
 			td.win { color: #c5ff00; }
 		</style>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
