Update NanoPi R2S comparison

--- a/stats.html
+++ b/stats.html
@@ -133,17 +133,17 @@
 								<h5>on NanoPi R2S</h5>
 								<table>
 									<tr><th>Stat</th><th>DietPi</th><th>DietPi/Armbian [%]</th><th>Armbian</th></tr>
-									<tr><td>RAM usage</td><td class="win">104Mi</td><td>90%</td><td class="los">116Mi</td></tr>
-									<tr><td>Running processes</td><td class="win">18</td><td>55%</td><td class="los">33</td></tr>
-									<tr><td>Disk usage</td><td class="win">596.2M</td><td>49%</td><td class="los">1.2G</td></tr>
-									<tr><td>Pre-installed packages</td><td class="win">223</td><td>47%</td><td class="los">475</td></tr>
-									<tr><td>Boot duration</td><td class="win">17.881s</td><td>73%</td><td class="los">24.553s</td></tr>
+									<tr><td>RAM usage</td><td class="win">60Mi</td><td>63%</td><td class="los">96Mi</td></tr>
+									<tr><td>Running processes</td><td class="win">11</td><td>44%</td><td class="los">25</td></tr>
+									<tr><td>Disk usage</td><td class="win">580 MiB</td><td>42%</td><td class="los">1379 MiB</td></tr>
+									<tr><td>Pre-installed packages</td><td class="win">225</td><td>48%</td><td class="los">466</td></tr>
+									<tr><td>Boot duration</td><td class="win">16.732s</td><td>95%</td><td class="los">17.546s</td></tr>
 									<tr><td>Temporary files in RAM</td><td class="win">Yes</td><td></td><td class="los">No</td></tr>
 									<tr><td>Logs in RAM</td><td class="win">Yes</td><td></td><td class="los">No</td></tr>
-									<tr><td>SSH pre-installed</td><td class="win">Yes</td><td></td><td class="los">Optional</td></tr>
-									<tr><td>Download size</td><td class="win">174.950.885 bytes</td><td>38%</td><td class="los">463.405.209 bytes</td></tr>
-									<tr><td>Image size</td><td class="win">1.071.456.256 bytes</td><td>57%</td><td class="los">1.866.465.280 bytes</td></tr>
-									<tr><td>Build date</td><td>2021-03-25</td><td></td><td>2021-01-11</td></tr>
+									<tr><td>SSH pre-installed</td><td>Yes</td><td></td><td>Yes</td></tr>
+									<tr><td>Download size</td><td class="win">132.148.481 bytes</td><td>34%</td><td class="los">389.250.660 bytes</td></tr>
+									<tr><td>Image size</td><td class="win">800.428.032 bytes</td><td>42%</td><td class="los">1.883.242.496 bytes</td></tr>
+									<tr><td>Build date</td><td>2021-04-02</td><td></td><td>2021-05-07</td></tr>
 								</table>
 							</div>
 						</div>
