Add NanoPi NEO3 comparison

--- a/stats.html
+++ b/stats.html
@@ -138,7 +138,7 @@
 									<tr><td>Disk usage</td><td class="win">580 MiB</td><td>42%</td><td class="los">1379 MiB</td></tr>
 									<tr><td>Pre-installed packages</td><td class="win">225</td><td>48%</td><td class="los">466</td></tr>
 									<tr><td>Boot duration</td><td class="win">16.732s</td><td>95%</td><td class="los">17.546s</td></tr>
-									<tr><td>Temporary files in RAM</td><td class="win">Yes</td><td></td><td class="los">No</td></tr>
+									<tr><td>Temporary files in RAM</td><td>Yes</td><td></td><td>Yes</td></tr>
 									<tr><td>Logs in RAM</td><td class="win">Yes</td><td></td><td class="los">No</td></tr>
 									<tr><td>SSH pre-installed</td><td>Yes</td><td></td><td>Yes</td></tr>
 									<tr><td>Download size</td><td class="win">132.148.481 bytes</td><td>34%</td><td class="los">389.250.660 bytes</td></tr>
@@ -168,6 +168,30 @@
 									<tr><td>Download size</td><td class="win">161.822.824 bytes</td><td>44%</td><td class="los">364.990.872 bytes</td></tr>
 									<tr><td>Image size</td><td class="win">1.148.600.320 bytes</td><td>67%</td><td class="los">1.702.887.424 bytes</td></tr>
 									<tr><td>Build date</td><td>2021-01-08</td><td></td><td>2021-05-07</td></tr>
+								</table>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div id="armbian3" class="toggleDiv single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>DietPi vs Armbian (server image)</h3><span class="show_hide close"></span></div></div>
+					<div class="row">
+						<div class="col-md-12 project-description">
+							<div class="project-info">
+								<h5>on NanoPi NEO3</h5>
+								<table>
+									<tr><th>Stat</th><th>DietPi</th><th>DietPi/Armbian [%]</th><th>Armbian</th></tr>
+									<tr><td>RAM usage</td><td class="win">59Mi</td><td>60%</td><td class="los">98Mi</td></tr>
+									<tr><td>Running processes</td><td class="win">11</td><td>42%</td><td class="los">26</td></tr>
+									<tr><td>Disk usage</td><td class="win">575 MiB</td><td>40%</td><td class="los">1432 MiB</td></tr>
+									<tr><td>Pre-installed packages</td><td class="win">214</td><td>46%</td><td class="los">466</td></tr>
+									<tr><td>Boot duration</td><td class="win">16.364s</td><td>86%</td><td class="los">18.966s</td></tr>
+									<tr><td>Temporary files in RAM</td><td>Yes</td><td></td><td>Yes</td></tr>
+									<tr><td>Logs in RAM</td><td class="win">Yes</td><td></td><td class="los">No</td></tr>
+									<tr><td>SSH pre-installed</td><td>Yes</td><td></td><td>Yes</td></tr>
+									<tr><td>Download size</td><td class="win">136.345.663 bytes</td><td>35%</td><td class="los">385.147.832 bytes</td></tr>
+									<tr><td>Image size</td><td class="win">795.869.184 bytes</td><td>42%</td><td class="los">1 883 242 496 bytes</td></tr>
+									<tr><td>Build date</td><td>2020-08-29</td><td></td><td>2021-05-07</td></tr>
 								</table>
 							</div>
 						</div>
@@ -255,6 +279,15 @@
 							<i class="more"></i>
 							<h3>Armbian</h3>
 							<p>on Odroid C4</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix armbian">
+						<a href="#distrostats" class="thumbnail show_hide" rel="#armbian3">
+							<img src="images/stats/armbian.png" alt="Armbian logo" width="8" height="5" loading="lazy">
+							<div class="mask"></div>
+							<i class="more"></i>
+							<h3>Armbian</h3>
+							<p>on NanoPi NEO3</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix debian">
