Add distro comparison button to features section title
and increment stylesheet version which contains the required styles.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<!-- Load CSS styles -->
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/jquery.cslider.min.css?v=2">
-		<link rel="stylesheet" type="text/css" href="css/style.min.css?v=2">
+		<link rel="stylesheet" type="text/css" href="css/style.min.css?v=3">
 		<!-- Include JavaScript -->
 		<script defer src="js/jquery.min.js"></script>
 		<script defer src="js/bootstrap.min.js"></script>
@@ -112,6 +112,8 @@
 				<div class="title">
 					<!-- Section title -->
 					<h1>DietPi - features overview</h1>
+					<!-- Section button -->
+					<a href="stats.html" class="button">View comparisons with other distros</a>
 					<!-- Section description -->
 					<p>DietPi is more than just a minimal image.</p>
 				</div>
