Write out "distributions"

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					<!-- Section title -->
 					<h1>DietPi - features overview</h1>
 					<!-- Section button -->
-					<a href="stats.html" class="button">View comparisons with other distros</a>
+					<a href="stats.html" class="button">View comparisons with other distributions</a>
 					<!-- Section description -->
 					<p>DietPi is more than just a minimal image.</p>
 				</div>
