Add Raspberry Pi OS Lite (64-bit) comparison on RPi 4

--- a/stats.html
+++ b/stats.html
@@ -125,6 +125,30 @@
 						</div>
 					</div>
 				</div>
+				<div id="raspberrypios2" class="toggleDiv single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>DietPi vs Raspberry Pi OS Lite (64-bit)</h3><span class="show_hide close"></span></div></div>
+					<div class="row">
+						<div class="col-md-12 project-description">
+							<div class="project-info">
+								<h5>on Raspberry Pi 4</h5>
+								<table>
+									<tr><th>Stat</th><th>DietPi</th><th>DietPi/Raspberry Pi OS [%]</th><th>Raspberry Pi OS</th></tr>
+									<tr><td>RAM usage</td><td class="win">42Mi</td><td>58%</td><td class="los">74Mi</td></tr>
+									<tr><td>Running processes</td><td class="win">11</td><td>39%</td><td class="los">28</td></tr>
+									<tr><td>Disk usage</td><td class="win">531 MiB</td><td>41%</td><td class="los">1292 MiB</td></tr>
+									<tr><td>Pre-installed packages</td><td class="win">228</td><td>49%</td><td class="los">461</td></tr>
+									<tr><td>Boot duration</td><td class="win">14.856s</td><td>73%</td><td class="los">18.560s</td></tr>
+									<tr><td>Temporary files in RAM</td><td class="win">Yes</td><td></td><td class="los">No</td></tr>
+									<tr><td>Logs in RAM</td><td class="win">Yes</td><td></td><td class="los">No</td></tr>
+									<tr><td>SSH pre-installed</td><td class="win">Yes</td><td></td><td class="los">Optional</td></tr>
+									<tr><td>Download size</td><td class="win">135.621.217 bytes</td><td>33%</td><td class="los">405.826.358 bytes</td></tr>
+									<tr><td>Image size</td><td class="win">889.331.712 bytes</td><td>49%</td><td class="los">1.816.133.632 bytes</td></tr>
+									<tr><td>Build date</td><td>2021-04-22</td><td></td><td>2021-05-07</td></tr>
+								</table>
+							</div>
+						</div>
+					</div>
+				</div>
 				<div id="armbian1" class="toggleDiv single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>DietPi vs Armbian (server image)</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
@@ -261,6 +285,15 @@
 							<i class="more"></i>
 							<h3>Raspberry Pi OS Lite</h3>
 							<p>on Raspberry Pi 2 (32-bit)</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix raspberrypios">
+						<a href="#distrostats" class="thumbnail show_hide" rel="#raspberrypios2">
+							<img src="images/stats/raspberrypios.svg" alt="Raspberry Pi OS logo" width="8" height="5" loading="lazy">
+							<div class="mask"></div>
+							<i class="more"></i>
+							<h3>Raspberry Pi OS Lite</h3>
+							<p>on Raspberry Pi 4 (64-bit)</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix armbian">
