Update slider to inform about DietPi v7.4 beta

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v7.3 has been released</h2>
-					<h4>Benefit from latest fixes and new software titles</h4>
-					<p>Turn your DHCP leased IP statically on first boot, block ads network-wide via AdGuard Home, stream music on multiple rooms via Snapcast, run Kubernetes clusters via K3s and more.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/#june-2021-version-73" target="_blank" rel="noopener">Release notes</a>
+					<h2>DietPi v7.4 beta is here!</h2>
+					<h4>Please help testing the upcoming release.</h4>
+					<p>Host your own chat server via Matrix Synapse, store data with the PostgreSQL database system and download from various video platforms via youtube-dl. Furthermore, DietPi has been tested to be ready for Debian Bullseye.</p>
+					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/4567" target="_blank" rel="noopener">Read more</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
