--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<div class="da-slide da-slide-current">
 					<h2>DietPi v7.4 beta is here!</h2>
 					<h4>Please help testing the upcoming release.</h4>
-					<p>Host your own chat server via Matrix Synapse, store data with the PostgreSQL database system and download from various video platforms via youtube-dl. Furthermore, DietPi has been tested to be ready for Debian Bullseye.</p>
+					<p>Host your own <code>Matrix Synapse</code> chat server, store data with the <code>PostgreSQL</code> database system and download from various video platforms via <code>youtube-dl</code>. Furthermore, DietPi has been tested to be ready for <code>Debian Bullseye</code>.</p>
 					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/4567" target="_blank" rel="noopener">Read more</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
