--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v7.4 beta is here!</h2>
-					<h4>Please help testing the upcoming release.</h4>
+					<h2>DietPi v7.4 has been released!</h2>
+					<h4>Time to upgrade...</h4>
 					<p>Host your own <code>Matrix Synapse</code> chat server, store data with the <code>PostgreSQL</code> database system and download from various video platforms via <code>youtube-dl</code>. Furthermore, DietPi has been tested to be ready for <code>Debian Bullseye</code>.</p>
 					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/4567" target="_blank" rel="noopener">Read more</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
