--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 				<div class="da-slide da-slide-current">
 					<h2>DietPi v7.4 has been released!</h2>
 					<h4>Time to upgrade...</h4>
-					<p>Host your own <code>Matrix Synapse</code> chat server, store data with the <code>PostgreSQL</code> database system and download from various video platforms via <code>youtube-dl</code>. Furthermore, DietPi has been tested to be ready for <code>Debian Bullseye</code>.</p>
-					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/4567" target="_blank" rel="noopener">Read more</a>
+					<p>Host your own <code>Matrix Synapse</code> chat server, store data with <code>PostgreSQL</code> or download videos via <code>youtube-dl</code>. Furthermore, DietPi has been tested for the upcoming release <code>Debian 11 (Bullseye)</code>.</p>
+					<a class="da-link" href="https://dietpi.com/docs/releases/#juli-2021-version-74" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
