--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 		<meta name="theme-color" content="#000000">
 		<!-- Load CSS styles -->
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="css/jquery.cslider.min.css?v=2">
+		<link rel="stylesheet" type="text/css" href="css/jquery.cslider.min.css?v=3">
 		<link rel="stylesheet" type="text/css" href="css/style.min.css?v=4">
 		<!-- Include JavaScript -->
 		<script defer src="js/jquery.min.js"></script>
 		<script defer src="js/bootstrap.min.js"></script>
-		<script defer src="js/jquery.cslider.min.js"></script>
+		<script defer src="js/jquery.cslider.min.js?v=1"></script>
 		<script defer src="js/mixitup.min.js"></script>
 		<script defer src="js/app.min.js"></script>
 	</head>
