--- a/contribute.html
+++ b/contribute.html
@@ -33,7 +33,7 @@
 		<meta name="theme-color" content="#000000">
 		<!-- Load CSS styles -->
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="css/style.min.css?v=3">
+		<link rel="stylesheet" type="text/css" href="css/style.min.css?v=4">
 		<!-- Include JavaScript -->
 		<script defer src="js/jquery.min.js"></script>
 		<script defer src="js/bootstrap.min.js"></script>
@@ -47,7 +47,7 @@
 				<!-- Navigation button, visible on small resolution -->
 				<button class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse"><svg viewBox="0 0 12 12"><path d="M1 1h10M1 6h10M1 11h10"/></svg></button>
 				<!-- Main navigation -->
-				<div class="navbar-nav navbar-collapse collapse">
+				<div class="navbar-collapse collapse">
 					<a class="nav-link" href="/">Home</a>
 					<a class="nav-link" href="/#features">Features</a>
 					<a class="nav-link" href="/#download">Download</a>
@@ -265,101 +265,79 @@
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Report">
 						<a href="#contributeinfo" class="thumbnail show_hide" rel="#bugreport">
 							<img src="images/contribute/diagnose.jpg" alt="Report an issue" width="8" height="5" loading="lazy">
-							<i class="more"></i>
 							<h3>Report an issue</h3>
 							<p>Bugs or security issues</p>
-							<div class="mask"></div>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Report">
 						<a href="#contributeinfo" class="thumbnail show_hide" rel="#diagnose">
 							<img src="images/contribute/investigate.jpg" alt="Investigate / Help" width="8" height="5" loading="lazy">
-							<i class="more"></i>
 							<h3>Diagnose issues</h3>
 							<p>Investigate & Find reasons</p>
-							<div class="mask"></div>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Report">
 						<a href="#contributeinfo" class="thumbnail show_hide" rel="#question">
 							<img src="images/contribute/question.jpg" alt="Question" width="8" height="5" loading="lazy">
-							<i class="more"></i>
 							<h3>Answer questions</h3>
 							<p>Share feedback and insights</p>
-							<div class="mask"></div>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Report">
 						<a href="#contributeinfo" class="thumbnail show_hide" rel="#test">
 							<img src="images/contribute/test-configurations.jpg" alt="Test" width="8" height="5" loading="lazy">
-							<i class="more"></i>
 							<h3>Test configurations</h3>
 							<p>Run specific tests</p>
-							<div class="mask"></div>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Ideas">
 						<a href="#contributeinfo" class="thumbnail show_hide" rel="#improvewebsite">
 							<img src="images/contribute/improve-website.jpg" alt="Improve website" width="8" height="5" loading="lazy">
-							<i class="more"></i>
 							<h3>Improve DietPi website</h3>
 							<p>Help to improve & extend</p>
-							<div class="mask"></div>
 						</a>
 					</div>
 					<!-- Remote desktop -->
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Ideas">
 						<a href="#contributeinfo" class="thumbnail show_hide" rel="#improvedocs">
 							<img src="images/contribute/improve-docs.jpg" alt="Improve docs" width="8" height="5" loading="lazy">
-							<i class="more"></i>
 							<h3>Extend DietPi Docs</h3>
 							<p>Bring more details & samples</p>
-							<div class="mask"></div>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Ideas">
 						<a href="#contributeinfo" class="thumbnail show_hide" rel="#suggest">
 							<img src="images/contribute/new-features.jpg" alt="Suggest" width="8" height="5" loading="lazy">
-							<i class="more"></i>
 							<h3>New software titles</h3>
 							<p>Suggest features & software</p>
-							<div class="mask"></div>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Expand">
 						<a href="#contributeinfo" class="thumbnail show_hide" rel="#code">
 							<img src="images/contribute/expand-code.jpg" alt="Code" width="8" height="5" loading="lazy">
-							<i class="more"></i>
 							<h3>Extend DietPi</h3>
 							<p>Bring contributions in GitHub</p>
-							<div class="mask"></div>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Community">
 						<a href="#contributeinfo" class="thumbnail show_hide" rel="#community">
 							<img src="images/contribute/be-part-community.jpg" alt="Community" width="8" height="5" loading="lazy">
-							<i class="more"></i>
 							<h3>Use DietPi Forum</h3>
 							<p>Share & Receive help</p>
-							<div class="mask"></div>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Community">
 						<a href="#contributeinfo" class="thumbnail show_hide" rel="#blog">
 							<img src="images/contribute/social-Twitter.jpg" alt="Blog" width="8" height="5" loading="lazy">
-							<i class="more"></i>
 							<h3>Write about DietPi</h3>
 							<p>Spread the word</p>
-							<div class="mask"></div>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Community">
 						<a href="#contributeinfo" class="thumbnail show_hide" rel="#social">
 							<img src="images/contribute/more-social.jpg" alt="Social" width="8" height="5" loading="lazy">
-							<i class="more"></i>
 							<h3>Social media</h3>
 							<p>Share info & love</p>
-							<div class="mask"></div>
 						</a>
 					</div>
 				</div>
@@ -398,7 +376,6 @@
 			document.querySelectorAll('div.toggleDiv').forEach(function(e){e.setAttribute("style","display:none");});
 			document.getElementById("contributeinfo").removeAttribute("style");
 			document.getElementById("portfolio-grid").removeAttribute("style");
-			document.querySelectorAll('svg.triangle').forEach(function(e){e.setAttribute("opacity","0");});
 		</script>
 	</body>
 </html>
